@@ -2,6 +2,7 @@ Revision history for Perl module Pod::Escapes
 
 1.05 2014-02-07
 
+    * Made strict- and warnings-clean.
     * Fixed typo reported in RT#85374 by dsteinbrunner
     * Renamed this file to Changes and reformatted as per CPAN::Changes::Spec
 
